--- a/Resources/Styles.xaml
+++ b/Resources/Styles.xaml
@@ -3,5 +3,7 @@
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="#FF9B73"/>
         <Setter Property="TextBlock.FontSize" Value="25" />
+        <Setter Property="TextBlock.FontFamily" Value="Lexend Mega" />
+        <Setter Property="Padding" Value="10" />
     </Style>
 </ResourceDictionary>
