--- a/Resources/Styles.xaml
+++ b/Resources/Styles.xaml
@@ -1,9 +1,33 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
     <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+        <Setter Property="MaxWidth" Value="150" />
+        <Setter Property="MaxHeight" Value="50" />
         <Setter Property="Background" Value="#FF9B73"/>
-        <Setter Property="TextBlock.FontSize" Value="25" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="TextBlock.FontSize" Value="12" />
+        <Setter Property="Margin" Value="5" />
         <Setter Property="TextBlock.FontFamily" Value="Lexend Mega" />
         <Setter Property="Padding" Value="10" />
     </Style>
+
+    <Style x:Key="TimestampBlock" TargetType="TextBlock">
+        <Setter Property="MaxWidth" Value="150" />
+        <Setter Property="MaxHeight" Value="50" />
+        <Setter Property="Background" Value="#989191" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="TextBlock.FontSize" Value="12" />
+        <Setter Property="Margin" Value="5" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+    </Style>
+    
+    <Style x:Key="WindowStyle" TargetType="Window">
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="Background" Value="#3F3F3F" />
+    </Style>
+
 </ResourceDictionary>
